# BOT_LLM

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
prompts/: system_prompt.txt
sql/: init.sql
src/: config.py  database.py  llm.py  loader.py  main.py
