[project]
name = "bot-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10.0",
    "asyncpg>=0.29.0",
    "ijson>=3.2.0",
    "mistralai>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
]
